added swagger for sensor_types
