# internal/domain/validation_errors.go
@@ -1,0 +1,5 @@
+package domain
+
+type ValidationErrorResponse struct {
+	Errors map[string]string `json:"errors"`
+}
